Made some changes for ohtuController, referenceservice, -Impl, also added addRef.jsp

--- a/Ohtu-miniprojekti/pom.xml
+++ b/Ohtu-miniprojekti/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>spring-webmvc</artifactId>
             <version>3.1.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.12</version>
+        </dependency>
     </dependencies>
 
     <build>
