--- a/Ohtu-miniprojekti/pom.xml
+++ b/Ohtu-miniprojekti/pom.xml
@@ -35,7 +35,31 @@
             <version>2.13.0</version>
             <scope>test</scope>
         </dependency>
-
+        
+        <!-- db -->
+        
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.168</version>
+        </dependency>
+        
+        <!-- dbcp -->
+        
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+       
+       <!-- jdbc -->
+       
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>3.1.2.RELEASE</version>
+        </dependency>
+        
         <!-- Mockito -->
         <dependency>
             <groupId>org.mockito</groupId>
