--- a/Ohtu-miniprojekti/pom.xml
+++ b/Ohtu-miniprojekti/pom.xml
@@ -247,7 +247,8 @@
                 <configuration>
                                                
                     <scanIntervalSeconds>5</scanIntervalSeconds>
-                    
+                    <stopPort>9966</stopPort>
+                    <stopKey>jetty-stop</stopKey>
                     <systemProperties>
                         <systemProperty>
                             <name>jetty.port</name>
