--- a/Ohtu-miniprojekti/pom.xml
+++ b/Ohtu-miniprojekti/pom.xml
@@ -130,7 +130,7 @@
         <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-test</artifactId>
-          <version>3.1.1.RELEASE</version>
+          <version>${spring.version}</version>
           <scope>test</scope>
         </dependency>
  
@@ -216,11 +216,28 @@
             <artifactId>hibernate-validator</artifactId>
             <version>4.3.0.Final</version>
         </dependency>
+<!--        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.5.2</version>
+        </dependency>-->
+        
+
+        
+        
+        
     </dependencies>
 
     <build>
         <!-- lisää kaikki filut warriin -->
         <plugins>
+            
+            
+             <plugin>
+                <groupId>org.codehaus.mojo</groupId>              
+                <artifactId>cobertura-maven-plugin</artifactId>                
+                <version>2.5.2</version>
+             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
