--- a/Ohtu-miniprojekti/pom.xml
+++ b/Ohtu-miniprojekti/pom.xml
@@ -71,6 +71,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        
+        <!--postgresql-->
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901.jdbc4</version>
+        </dependency>
  
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
