--- a/Ohtu-miniprojekti/src/main/webapp/WEB-INF/web.xml
+++ b/Ohtu-miniprojekti/src/main/webapp/WEB-INF/web.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
-                             http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-         version="2.4">
+<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee                               http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <display-name>Ohtu-miniprojekti</display-name>
-
-
-
     <servlet>
         <servlet-name>front-controller</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -19,12 +12,9 @@
         <url-pattern>/app/*</url-pattern>
     </servlet-mapping>
 
-    
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
-    
-    
     <filter>
         <filter-name>encoding-filter</filter-name>
         <filter-class>
@@ -39,11 +29,8 @@
             <param-value>true</param-value>
         </init-param>
     </filter>
-    
     <filter-mapping>
         <filter-name>encoding-filter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
-    
 </web-app>
