changed production db config

--- a/Ohtu-miniprojekti/src/main/resources/properties/production.properties
+++ b/Ohtu-miniprojekti/src/main/resources/properties/production.properties
@@ -1,5 +1,5 @@
 deployment.location=PRODUCTION
-persistence.unit=persistenceUnitProd
+persistence.unit=persistenceUnitDev
 database.url=jdbc:postgresql://localhost/pperala
 database.password=passu
 database.username=pperala
